--- a/libft/ft_lib/Makefile
+++ b/libft/ft_lib/Makefile
@@ -25,7 +25,7 @@ ft_lstadd_back ft_lstdelone ft_lstclear ft_lstiter ft_lstmap\
 ft_putchar ft_putstr ft_itoa_base ft_atof ft_isspace\
 ft_isint ft_isdouble ft_abs ft_pow ft_get_max ft_get_min\
 ft_strtoupper ft_strtolower ft_issign ft_isfloat ft_isdouble\
-ft_error ft_tablen ft_free_2d_list ft_strcmp ft_isnumber ft_ischevron\
+ft_error ft_exit ft_tablen ft_free_2d_list ft_strcmp ft_isnumber ft_ischevron\
 
 SRCS = $(addprefix $(SRC_DIR), $(addsuffix .c, $(SRC_FILES)))
 OBJS = $(addprefix $(OBJ_DIR), $(addsuffix .o, $(SRC_FILES)))
